// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Command: Compile > allowEmpty = false > Should show error and stop compilation of catalog if message doesnt have a translation (no template) 1`] = `
Error: Failed to compile catalog for locale pl!
Missing 1 translation(s)

`;

exports[`CLI Command: Compile > allowEmpty = false > Should show error and stop compilation of catalog if message doesnt have a translation (with template) 1`] = `
{
  en: undefined,
  pl: undefined,
}
`;

exports[`CLI Command: Compile > allowEmpty = false > Should show error and stop compilation of catalog if message doesnt have a translation (with template) 2`] = `
Error: Failed to compile catalog for locale en!
Missing 1 translation(s)

`;

exports[`CLI Command: Compile > allowEmpty = false > Should show missing messages verbosely when verbose = true 1`] = `
en ⇒ en.js
Error: Failed to compile catalog for locale pl!
Missing translations:
mY42CM: (Hello World)
2ZeN02: (Test String)

`;
